--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "minecloud-backend",
   "version": "1.0.0",
-  "type": "module",
+  "main": "server/index.ts",
   "scripts": {
-    "dev": "tsx server/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node build/index.js"
   },
   "dependencies": {
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "zod": "^3.24.2",
-    "dotenv": "^16.3.1"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "typescript": "^5.4.2",
-    "tsx": "^4.7.0"
+    "@types/node": "^20.11.19",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.13"
   }
 }
